...
    @Environment(AppState.self) private var appState
    
    var body: some View {
        TabView {
            FeedView()
                .tabItem {
                    Label("Feed", systemImage: "house.fill")
                }
            
            ActivitiesView()
                .tabItem {
                    Label("Activities", systemImage: "figure.run")
                }
            
            Text("Segments")
                .tabItem {
                    Label("Segments", systemImage: "flag.fill")
                }
...
